--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Kanit:400,500" rel="stylesheet">
     <title>Foundation Starter Template</title>
     <link rel="stylesheet" href="css/foundation.css" />
   </head>
   <body>
     <h1>Hello, world!</h1>
 
+    <div class="row"> </div>
 
 
 
